# WibeWM

./: .gitignore  CMakeLists.txt  README.md
src/: Client.hpp  Connection.hpp  Drawable.cpp  Drawable.hpp  Layouts.hpp  Monitor.hpp  Types.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp  Workspace.cpp  Workspace.hpp  confg.hpp  config.hpp  main.cpp  types.hpp
